Fix background issues on mobile

--- a/onmyoji/static/onmyoji/css/main.css
+++ b/onmyoji/static/onmyoji/css/main.css
@@ -1,9 +1,18 @@
 #main_content {
     padding: 50px 10% 50px;
     min-height: calc(100vh - 50px);
-    background: url("../img/1.jpg") no-repeat fixed center;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.6) 100%);
-    background-size: cover;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0) 640px), url("../img/1.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;   /* Ignore on mobile */
+    background-size: cover;         /* Buggy on mobile */
+}
+@media screen and (max-width: 768px) {
+    #main_content {
+        background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%, rgba(0,0,0,1) 640px), url("../img/1.jpg");
+        background-position: center top;
+        background-size: unset;
+    }
 }
 
 h1 {
